[package]
name = "poly-rs"
version = "0.1.0"
authors = ["solanav <solanav@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
ndarray-rand = "0.11.0"
rand = "0.7.3"
nalgebra = "0.19.0"
rayon = "1.3.0"
idx-decoder = "0.0.2"